infrastructure/03-apps/notifications/manifests/mailrise.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailrise
spec:
  selector:
    app: mailrise
  ports:
    - name: smtp
      port: 25
      targetPort: 8025
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailrise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailrise
  template:
    metadata:
      labels:
        app: mailrise
    spec:
      securityContext:
        runAsUser: 11454
        runAsGroup: 11454
        runAsNonRoot: true
      containers:
        - name: mailrise
          image: yoryan/mailrise:1.4.0
          securityContext:
            runAsUser: 11454
            runAsGroup: 11454
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: mailrise-config-secret
              mountPath: /etc/mailrise.conf
              subPath: mailrise.conf
              readOnly: true
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: mailrise-config-secret
          secret:
            name: mailrise-config
        - name: tmp
          emptyDir: {}
