infrastructure/03-apps/notifications/manifests/mailrise-network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: mailrise-to-gotify
  namespace: notifications
spec:
  endpointSelector:
    matchLabels:
      app: mailrise
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": mimir
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": grafana
      toPorts:
        - ports:
            - port: "25"
              protocol: TCP
            - port: "8025"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": notifications
            "k8s:app": gotify
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "8080"
              protocol: TCP
